--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Rammetto+One&family=Sulphur+Point:wght@300;400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Rammetto+One&family=Sulphur+Point:wght@300;400;700&display=swap');
 
 :root {
     --header: "Rammetto One", sans-serif;
@@ -15,17 +15,12 @@
     --black: #000000;
 }
 
-.mainLight {
-    font-family: var(--main);
-    font-weight: 300; /* light */
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
-.mainRegular {
-    font-family: var(--main);
-    font-weight: 400; /* regular */
-}
-
-.mainBold {
-    font-family: var(--main);
-    font-weight: 700; /* bold */
+body {
+    background-color: var(--darkGreen);
 }
